# Maxim

./: .gitignore  README.md
AndroidProjects/: .gitignore
AndroidProjects/Sunshine-Version-2/app/: build.gradle
AndroidProjects/TheMovieApp/: README.md
AndroidProjects/TheMovieApp/app/: build.gradle
CppProjects/CameraCalibration/: CMakeLists.txt  ChangeLog.md
CppProjects/CameraCalibration/resources/: sources.qrc
CppProjects/CameraCalibration/src/: Setting.cpp  Setting.ui  camera_calibration.cpp  camerathread.cpp  mainwindow.cpp  mainwindow.ui
CppProjects/CameraCalibration/src/include/: Setting.h  camerathread.h  mainwindow.h
CppProjects/Examples/: installer.sh
CppProjects/Examples/Eigen/: CMakeLists.txt  main.cpp
CppProjects/Examples/PCA/test_1/cmake/: CMakeLists.txt
CppProjects/Examples/PCA/test_1/cmake/src/: main.cpp
CppProjects/Examples/PCA/test_2/cmake/: CMakeLists.txt
CppProjects/Examples/PCA/test_2/cmake/src/: main.cpp  sample.cpp
CppProjects/Examples/PCA/test_2/cmake/src/include/: sample.h
CppProjects/Examples/PCA/test_3/cmake/: CMakeLists.txt
CppProjects/Examples/PCA/test_3/cmake/src/: main.cpp  sample.cpp
CppProjects/Examples/PCA/test_3/cmake/src/include/: sample.h
CppProjects/Examples/PCL/: CMakeLists.txt  main.cpp
CppProjects/Examples/boost/Daytime/Client/: CMakeLists.txt
CppProjects/Examples/boost/test_1/: CMakeLists.txt
CppProjects/Examples/boost/test_2/: CMakeLists.txt  main.cpp
CppProjects/Examples/test_Pen/: .gitignore
CppProjects/Sudoku/: .gitignore  README.md
CppProjects/Sudoku/cmake/src/: CMakeLists.txt  digitrecognizer.cpp  main.cpp  sudoku.cpp
CppProjects/Sudoku/cmake/src/include/: digitrecognizer.h  sudoku.h
CppProjects/Timing/: CMakeLists.txt
CppProjects/Timing/qml/: BarOption.qml  MainList.qml  MainMenu.qml  PrettyTimeList.qml  RankingView.qml  ResultList.qml  RiderModel.qml  RiderResultModel.qml  RiderTime.qml  TimeList.qml  ToolTime.qml  ToolView.qml  dataloader.mjs  lista.csv  lista.ods  main.qml  mainMenu.qml  qml.qrc  rider_5jpg
CppProjects/Timing/src/: BackEnd.cpp  ProcessTime.cpp  ReadData.cpp  TimeThread.cpp  main.cpp
CppProjects/Timing/src/include/: processtime.h  readdata.h  timethread.h
CppProjects/test/src/: main.cpp
PythonProjects/: .gitignore  bikes_time.py
PythonProjects/Examples/Hand-Gesture/: Hand-Gesture.py
PythonProjects/Examples/Tutorial_1/: openCamera.py
PythonProjects/Examples/testKivy/: Multiple_LayoutApp.py  README.md  bezier.py  example1.py  example2.py  example3.py  example4.py  kvbl.kv  kvfile.kv  main.kv  main.py  multiple_layout.kv  requirements.txt  rotation.py
PythonProjects/NN_FaceRecognition/: Check_images.py  real_validation.py  speechExample.py  take_photo.py  test.py  testCam.py  training.py  validate.py
PythonProjects/Neural Network for face Recognition/: Check_images.py  real_validation.py  take_photo.py  testCam.py
PythonProjects/Neural Network for face Recognition/extra_samples/: NeuronEGG.py  train.py
PythonProjects/testJetsonNano/: README.md  cameraCalib.py  carDetection.py  checkImage.py  picamera.py  runTimeLapsed.sh  takeImage.py  takeVideo.py  test.py  testcar.py  timeLapsed.py
PythonProjects/testMySql/: README.md  lambda_cables.py  lambda_function.py  pMySql.py  rds_config.py  test_lambda.py
ROSProjects/: README.md
ROSProjects/CopterROS/: README.md
ROSProjects/CopterROS/src/xmcprotocol/: CMakeLists.txt  package.xml
ROSProjects/CopterROS/src/xmcprotocol/include/xmcprotocol/: serialProtocol.cpp  serialProtocol.cpp.orig  serialProtocol.h
ROSProjects/CopterROS/src/xmcprotocol/msg/: IMUstatesRaw.msg  Motorcommand.msg
ROSProjects/CopterROS/src/xmcprotocol/src/: exampleList.cpp  examplePub.cpp  serialReceive.cpp  serialTest.cpp  serialTransmit.cpp
ROSProjects/CopterROS_v2/: .gitignore  Dockerfile  README.md  docker-compose.yml
ROSProjects/CopterROS_v2/src/control/: CMakeLists.txt  package.xml
ROSProjects/CopterROS_v2/src/control/control_ert_rtw/: control.cpp  control.h  control_types.h  ert_main.cpp  rtwtypes.h
ROSProjects/CopterROS_v2/src/control/src/: control_node.cpp
ROSProjects/CopterROS_v2/src/model/: CMakeLists.txt  package.xml
ROSProjects/CopterROS_v2/src/model/model_ert_rtw/: buildInfo.mat  defines.txt  ert_main.cpp  model.h
ROSProjects/CopterROS_v2/src/model/model_ert_rtw/html/: define.js  ert_main_cpp.html  model_codegen_rpt.html  model_contents.html  model_cpp.html  model_h.html  model_subsystems.html  model_trace.html  model_traceInfo.js  traceInfo.mat  traceInfo_flag.js
ROSProjects/CopterROS_v2/src/model/src/: model_node.cpp
ROSProjects/CopterROS_v2/src/quad_viz_pub/: CMakeLists.txt  conf.rviz  package.xml
ROSProjects/CopterROS_v2/src/quad_viz_pub/meshes/: quadrotor.stl
ROSProjects/CopterROS_v2/src/quad_viz_pub/src/: quad_viz_pub_node.cpp
ROSProjects/CopterROS_v2/src/trajectory/: CMakeLists.txt  package.xml
ROSProjects/CopterROS_v2/src/trajectory/src/: segment  trajectory.cpp
ROSProjects/arduino/: .gitignore
ROSProjects/hector_quadrotor_tutorial/: .gitignore
ROSProjects/hector_quadrotor_tutorial/src/: .rosinstall
ScriptProjects/bashApps/: makeBackupEdu.sh
ScriptProjects/bashApps/backupSD/: README.md  backupsd.sh
ScriptProjects/conky/: README.md  copyTo.sh  exclude-file.txt  startConky.sh  update.sh
ScriptProjects/conky/conky_ddweather/: README.md  conky_ddweather  ddweather.lua
ScriptProjects/conky/conky_e2i/: conky_e2i
ScriptProjects/conky/conkyrc/: conkyrc_default  conkyrc_default_1  conkyrc_vimtip
ScriptProjects/conky/revolutionary_clocks/: README.md
ScriptProjects/tmux/: README.md  tmux.conf
ScriptProjects/tmux/themes/: airline  solarized  zenburn
Sunshine-Version-2/: README.md
Sunshine-Version-2/app/: build.gradle
TheMovieApp/app/: build.gradle
TheMovieApp/gradle/wrapper/: gradle-wrapper.properties
WebProjects/Examples/basic-web-pages/: basics.html
WebProjects/Examples/css-box-model/: box-styles.css  boxes.html
WebProjects/cloudApp/: README.md  cloudapp.wsgi  initApp.py  odroidApp.py
WebProjects/streamCamera/: README.md  cameraCalib.py  jetsonApp.py
(+255 files in other folders)
