<?xml version="1.0"?>
<package format="3">
  <name>model</name>
  <version>0.0.1</version>
  <description>El paquete model simula el comportamiento del dron.</description>

  <maintainer email="rosu@todo.todo">rosu</maintainer>
  <license>MIT</license>

  <!-- Herramienta de compilaci贸n -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias en tiempo de compilaci贸n y ejecuci贸n -->
  <depend>rclcpp</depend>
  <depend>copter</depend>

  <!-- Exportaci贸n para ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>