<?xml version="1.0"?>
<package format="3">
  <name>quad_viz_pub</name>
  <version>0.0.1</version>
  <description>Visualization node for quadrotor markers and trajectory</description>

  <maintainer email="fabian@todo.todo">fabian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>copter</depend> <!-- Mensajes personalizados -->

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>