<?xml version="1.0"?>
<package format="3">
  <name>trajectory</name>
  <version>0.0.0</version>
  <description>The trajectory package</description>

  <maintainer email="edu@todo.todo">edu</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>copter</build_depend>
  <build_depend>rclcpp</build_depend>

  <!-- Run dependencies -->
  <exec_depend>copter</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>